--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:theme="@style/Theme.BleScan"
         tools:targetApi="31">
         <activity
-            android:name=".BluetoothActivity"
+            android:name=".Bluetooth2Activity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,6 +41,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
+        <activity android:name=".BluetoothActivity" />
+
     </application>
 
 </manifest>
